Fixed righthand mobile styling overflow  Please enter the commit message for your changes. Lines starting

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@
   justify-content: flex-start;
   background-color: white;
   background: linear-gradient(to right, rgb(92, 201, 255), rgb(30, 101, 152));
+  overflow: hidden;
 
 }
 /* All returned section elements */
@@ -57,17 +58,7 @@
   font-size: 1.5rem;
 }
 
-.CENy8b {
-  /* height: 250px; */
-}
-/* Attendance Matters header */
 
-body {
-  /* margin: 0; */
-  font-family: Louis George Cafe;
-  /* font-size: 1.5rem; */
-  outline: none;
-}
 .loadingHeader {
   position: absolute;
   top: 0;
@@ -79,27 +70,35 @@ body {
   padding-top: 10rem;
 }
 @media (max-width: 768px) {
-  /* body {
-    font-size: 14px;
-
-  } */
-
+  .appContainer {
+    margin-top: 120px;
+    box-sizing: border-box !important;
+    position: relative;
+    width: 100vw !important;
+    height: calc(100vh - 120px);
+    overflow-y: auto !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: white;
+    background: linear-gradient(to right, rgb(92, 201, 255), rgb(30, 101, 152));
+  }
   .yaqOZd {
     position: relative;
     width: 95vw !important;
-    margin: 2rem;
+    margin: 2rem !important;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, .7);
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.367);
     text-align: center;
     min-height: 300px;
   }
-
   .sectionContainer {
     position: relative;
     width: 95vw !important;
     box-sizing: border-box;
-    margin: 2rem;
+    margin: 2rem !important;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, .8);
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.367);
@@ -107,5 +106,13 @@ body {
     min-height: 300px;
     padding: 2rem;
     font-size: 1.5rem;
+  }
+  .blogPostsContainer {
+    box-sizing: border-box;
+    width: 100vw !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
   }
 }
